# api/api.yaml
@@ -66,6 +66,7 @@ paths:
     parameters:
       - $ref: '#/components/parameters/qOffset'
       - $ref: '#/components/parameters/qLimit'
+      - $ref: '#/components/parameters/qTradeClosed'
     get:
       operationId: getAllTrades
       responses:
@@ -109,6 +110,14 @@ components:
       schema:
         type: string
       required: true
+    qTradeClosed:
+      name: tradeClosed
+      in: query
+      schema:
+        type: boolean
+        default: false
+      required: false
+
 
     qOffset:
       name: offset
