# api/meth.go
@@ -1,0 +1,9 @@
+package api
+
+func (q *QTradeClosed) Bool() *bool {
+	if q == nil {
+		return nil
+	}
+	b := bool(*q)
+	return &b
+}
